--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "formik": "^2.4.6",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
